# io-rts-esp32

./: .cppcheck-suppressions  .eslintrc.json  .gitignore  CMakeLists.txt  README.md  package.json  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.heltec  web-portalcontext.md
.github/workflows/: ci.yml  release.yml
components/oled_display/: oled_display.c
components/oled_display/include/: oled_display.h
components/web_server/: CMakeLists.txt  syslog.cpp  web_server.cpp
components/web_server/include/: syslog.h  web_server.h
config/: MiscConfig.cpp  MiscConfig.hpp  MqttConfig.cpp  NetworkConfig.cpp  NetworkConfig.hpp  SyslogConfig.cpp
doc/: command_line.md
docs/: TODO.md  bug-analysis-2026-06-23.md
docs/superpowers/specs/: 2026-06-04-device-card-redesign.md
helpers/: CmdLineIoTools.cpp  CmdLineManagement.cpp  CmdLineManagement.hpp  CmdLineNetworkTools.cpp  CmdLineSyslogTools.cpp  DeviceStorage.cpp  DeviceStorage.hpp  MqttHelpers.cpp  MqttHelpers.hpp  NetworkHelpers.cpp  NetworkHelpers.hpp  WifiProvision.cpp  WifiProvision.hpp
io-homecontrol/: IoHomeControl.cpp  IoHomeControl.hpp
io-homecontrol/protocol/: iohome_commands.cpp  iohome_commands.hpp  iohome_constants.h  iohome_crypto.cpp  iohome_crypto.h  iohome_device.hpp  iohome_frame.cpp  iohome_frame.hpp
io-homecontrol/radio/: RadioModule.hpp  RadioSX1276.cpp  RadioSX1276.hpp
main/: CMakeLists.txt  IoRtsManager.cpp  IoRtsManager.hpp  Kconfig.projbuild  cmd_line_management.cpp  cmd_line_management.hpp  idf_component.yml  main.cpp
web_data/: index.html
web_data/css/: style.css
web_data/js/: api.js  app.js  devices.js  i18n.js  popup.js  remotes.js  settings.js  syslog.js
web_data/lang/: de.json  en.json  fr.json  nl.json
web_data_v2/: index.html  languages.json
web_data_v2/css/: style.css
web_data_v2/js/: app.js  devices.js  help.js  ota.js  popup.js  remotes.js  settings.js  updater.js  utils.js
web_data_v2/lang/: de.json  en.json  fr.json  nl.json
